--- a/movie management/3_Implementation/Makefile
+++ b/movie management/3_Implementation/Makefile
@@ -1,53 +1,23 @@
-# Name of the project
-PROJECT_NAME = Calculator
+SRC = src/function.c\
+	main.c
 
-# Output directory
+INC = -Iunity\
+-Iinc\
+-Itest
+
+PROJECT_NAME = FUNCTION.out
 BUILD = build
-
-# All source code files
-SRC = project_main.c\
-src/calculator_operations.c\
-
-# All test source files
-TEST_SRC = src/calculator_operations.c\
-test/test_calculator_operations.c
-
-TEST_OUTPUT = $(BUILD)/Test_$(PROJECT_NAME).out
-
-# All include folders with header files
-INC	= -Iinc
-
-PROJECT_OUTPUT = $(BUILD)/$(PROJECT_NAME).out
-
-# Document files
-DOCUMENTATION_OUTPUT = documentation/html
-
-# Default target built
-$(PROJECT_NAME):all
-
-# Run the target even if the matching name exists
-.PHONY: run clean test  doc all
+$(PROJECT_NAME): $(SRC)
+	gcc $(SRC) $(INC) -o $(PROJECT_NAME)
 
 all: $(SRC) $(BUILD)
-	gcc $(SRC) $(INC) -o $(PROJECT_OUTPUT).out
-
-# Call `make run` to run the application
+	gcc $(SRC) $(INC) -o $(PROJECT_NAME)
 run:$(PROJECT_NAME)
-	./$(PROJECT_OUTPUT).out
-
-# Document the code using Doxygen
+	./${PROJECT_NAME}
 doc:
-	make -C ./documentation
+	make -C documentation
 
-# Build and run the unit tests
-test:$(BUILD)
-	gcc $(TEST_SRC) $(INC) -o $(TEST_OUTPUT) -lcunit
-	./$(TEST_OUTPUT)
-
-# Remove all the built files, invoke by `make clean`
 clean:
-	rm -rf $(BUILD) $(DOCUMENTATION_OUTPUT)
-
-# Create new build folder if not present
+	rm -rf $(PROJECT_NAME) documentation/html
 $(BUILD):
 	mkdir build
